# rmqhgen

./: .travis.yml  Cargo.toml  README.md
.github/workflows/: build-and-test.yml  release.yml  test.yml
ci/: before_deploy.sh  script.sh
src/: main.rs
tests/: cli.rs
