[package]
name = "rmqhgen"
description = "Generate and validate RabbitMQ password hashes"
version = "0.2.4"
authors = ["Guillaume Charmetant <cguille.dev@gmail.com>"]
edition = "2018"

[dependencies]
base64 = "0.13.0"
clap = "2.33.3"
rand = "0.8.4"
rust-crypto = "0.2.36"

[dev-dependencies]
assert_cmd = "2.0.0"
predicates = "2.0.0"
